style.scss
---
---

//
// IMPORTS
//

@import "reset";
@import "variables";
// Syntax highlighting @import is at the bottom of this file

/**************/
/* BASE RULES */
/**************/

html {
  font-size: 100%;
}

body {
	background: $white;
  font: 18px/1.4 $helvetica;
  color: $darkGray;
}

.container {
  margin: 0 auto;
  max-width: 740px;
  padding: 0 10px;
  width: 100%;
}

h1, h2, h3, h4, h5, h6 {
  font-family: $helveticaNeue;
  color: $darkerGray;
  font-weight: bold;

  line-height: 1.7;
  margin: 1em 0 15px;
  padding: 0;

  @include mobile {
    line-height: 1.4;
  }

  // Show the anchor '#' link on hover
  .anchor-heading {
    color: $blue;
    font-weight: normal;
    opacity: 0;
    transition: opacity 0.2s;
    margin-right: 0.3em;
    text-decoration: none;
  }

  &:hover .anchor-heading {
    opacity: 0.5;
  }
}

h1 {
  font-size: 30px;
  a {
    color: inherit;
  }
}

h2 {
  font-size: 24px;
}

h3 {
  font-size: 20px;
}

h4 {
  font-size: 18px;
  color: $gray;
}

p {
  margin: 15px 0;
}

a {
  color: $blue;
  text-decoration: none;
	cursor: pointer;
  &:hover, &:active {
    color: $blue;
  }
}

ul, ol {
  margin: 15px 0;
  padding-left: 30px;
}

ul {
  list-style-type: disc;
}

ol {
  list-style-type: decimal;
}

ol ul, ul ol, ul ul, ol ol {
  margin: 0;
}

ul ul, ol ul {
  list-style-type: circle;
}

details summary {
  list-style: none;
}

details summary::after {
  content: " ▶";
}

details[open] summary::after {
  content: " ▼";
}

em, i {
  font-style: italic;
}

strong, b {
  font-weight: bold;
}

img {
  max-width: 100%;
}

// Fixes images in popup boxes from Google Translate
.gmnoprint img {
  max-width: none;
}

.date {
  font-style: italic;
  color: $gray;
}

// Specify the color of the selection
::-moz-selection {
  color: $black;
  background: $lightGray;
}
::selection {
  color: $black;
  background: $lightGray;
}

// Nicolas Gallagher's micro clearfix hack
// http://nicolasgallagher.com/micro-clearfix-hack/
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

/*********************/
/* LAYOUT / SECTIONS */
/*********************/

//
// .masthead
//

.wrapper-masthead {
  margin-bottom: 50px;
}

.masthead {
  padding: 20px 0;
  border-bottom: 1px solid $lightGray;

  @include mobile {
    text-align: center;
  }
}

.site-avatar {
  float: left;
  width: 70px;
  height: 70px;
  margin-right: 15px;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }

  img {
    border-radius: 5px;
  }
}

.site-info {
  float: left;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }
}

.site-name {
  margin: 0;
  color: $darkGray;
  cursor: pointer;
  font-family: $helveticaNeue;
  font-weight: 300;
  font-size: 28px;
  letter-spacing: 1px;
}

.site-description {
  margin: -5px 0 0 0;
  color: $gray;
  font-size: 16px;

  @include mobile {
    margin: 3px 0;
  }
}

nav {
  float: right;
  margin-top: 23px; // @TODO: Vertically middle align
  font-family: $helveticaNeue;
  font-size: 18px;

  @include mobile {
    float: none;
    margin-top: 9px;
    display: block;
    font-size: 16px;
  }

  a {
    margin-left: 20px;
    color: $darkGray;
    text-align: right;
    font-weight: 300;
    letter-spacing: 1px;

    @include mobile {
      margin: 0 10px;
      color: $blue;
    }
  }
}

//
// .main
//

.posts > .post {
  padding-bottom: 2em;
  border-bottom: 1px solid $lightGray;
}

.posts > .post:last-child {
  padding-bottom: 1em;
  border-bottom: none;
}

.post {
  blockquote {
    margin: 1.8em .8em;
    border-left: 2px solid $gray;
    padding: 0.1em 1em;
    color: $gray;
    font-size: 22px;
    font-style: italic;
  }

  .comments {
    margin-top: 10px;
  }

  .read-more {
    text-transform: uppercase;
    font-size: 15px;
  }
}

.wrapper-footer {
  margin-top: 50px;
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  background-color: $lightGray;
}

footer {
  padding: 20px 0;
  text-align: center;
}

/* General table styling */
table {
  width: 100%;
  border-collapse: collapse; /* Avoid double borders */
  margin: 20px 0; /* Add some spacing */
  font-size: 16px;
  font-family: Arial, sans-serif;
}

/* Table header styling */
th {
  background-color: #f4f4f4; /* Light gray background for the header */
  color: #333; /* Dark text for contrast */
  text-align: left;
  padding: 10px;
  border-bottom: 2px solid #ccc; /* Distinct bottom border */
}

/* Table row styling */
td {
  padding: 10px;
  border-bottom: 1px solid #ddd; /* Light border between rows */
}

/* Zebra striping for rows */
tr:nth-child(even) {
  background-color: #f9f9f9; /* Light gray for alternate rows */
}

tr:nth-child(odd) {
  background-color: #fff; /* White for other rows */
}

/* Hover effect */
tr:hover {
  background-color: #f1f1f1; /* Slightly darker gray for hover effect */
}

/* Responsive table styling */
@media screen and (max-width: 600px) {
  table {
    width: 100%; /* Ensure it fits smaller screens */
    font-size: 14px; /* Slightly smaller text for smaller devices */
  }

  th, td {
    padding: 8px; /* Adjust padding for smaller screens */
  }
}

// Settled on moving the import of syntax highlighting to the bottom of the CSS
// ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
@import "highlights";
@import "svg-icons";

.encart {
  border-left: 5px solid;
  padding: 1rem;
  margin: 1rem 0;
  border-radius: 6px;

  &.orange {
    border-left-color: #fb8c00;
    background: #fff3e0;
  }
  &.red {
    border-left-color: #e53935;
    background: #ffebee;
  }
  &.green {
    border-left-color: #43a047;
    background: #e8f5e9;
  }
  &.blue {
    border-left-color: #3498db;
    background: #eef7ff;
  }
}

